--- a/src/components/sass/Nav.scss
+++ b/src/components/sass/Nav.scss
@@ -6,7 +6,9 @@
     justify-content: space-between;
     align-items: center;
     > .nav__logoBox {
+        cursor: pointer;
         > img {
+            cursor: pointer;
             object-fit: contain;
             height: 40px;
         }
