--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,24 @@
   padding: 0;
   margin: 0;
 }
+
 body {
   background-color: #ffffff;
 }
+
 .btn {
   background: none;
   border: none;
   cursor: pointer;
 }
+
 .fixed-content {
   position: sticky;
   top: 0;
+}
+
+.container {
+  margin: 20px auto;
+  width: 900px;
+  max-width: 90%;
 }
