--- a/src/components/sass/VisitorsOderCard.scss
+++ b/src/components/sass/VisitorsOderCard.scss
@@ -1,10 +1,11 @@
 .visitorsOderCard {
     padding: 20px 25px 30px 25px;
     margin: 10px;
-    border-left: 4px solid #ef4f5f;
-    // width: 23em;
     border-radius: 0 10px 10px 0;
-    transition: box-shadow 300ms ease-in, transform 300ms ease-in;
+    transition: box-shadow 300ms ease-in, transform 300ms ease-in, border-radius 300ms ease-in,
+        border-left 300ms ease-in;
+    border: 1px solid rgba(128, 128, 128, 0.3);
+    border-left: 4px solid #ef4f5f;
     > .visitorsOderCard__img {
         display: flex;
         justify-content: center;
@@ -14,7 +15,6 @@
         > img {
             object-fit: contain;
             height: 100px;
-            // width: 100%;
         }
     }
     > .visitorsOderCard__main {
@@ -48,8 +48,9 @@
         }
     }
     &:hover {
-        // background-color: #ef4f5f13;
         cursor: pointer;
+        border-radius: 10px;
+        border-left: 4px solid transparent;
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
         transform: scale(1.005);
     }
