--- a/src/components/Payment/Steps/PaymentMethod.scss
+++ b/src/components/Payment/Steps/PaymentMethod.scss
@@ -31,3 +31,9 @@
         }
     }
 }
+.paymentMethod__disabled {
+    border: 2px solid rgba(128, 128, 128, 0.412) !important;
+    div {
+        color: rgba(128, 128, 128, 0.412) !important;
+    }
+}
