--- a/src/components/sass/Card.scss
+++ b/src/components/sass/Card.scss
@@ -1,4 +1,6 @@
 .card {
+    width: 21em;
+    overflow: hidden;
     margin: 10px;
     padding: 15px;
     cursor: pointer;
@@ -8,9 +10,13 @@
         color: black;
         text-decoration: none;
         > .card__img {
+            width: 340px;
+            height: 220px;
+            overflow: hidden;
+            border-radius: 10px;
             > img {
                 border-radius: 10px;
-                height: 220px;
+                height: 100%;
                 object-fit: contain;
             }
         }
