user-auth added

--- a/src/components/sass/VenderNav.scss
+++ b/src/components/sass/VenderNav.scss
@@ -9,7 +9,7 @@
     padding: 20px 20px 20px 0px;
     color: gray;
     background-color: #ffff;
-
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     .visitorsNav__logo {
         display: flex;
         justify-content: center;
